k8s/base/services/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: mypoly
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
